# SearchEngine

./: README.md  gitignore
SearchEngine/: answers.json  config.json  requests.json
SearchEngine/include/: ConverterJSON.h
SearchEngine/resources/: file010.txt
SearchEngine/src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp
SearchEngine/test/testSearch_engine/: test.cpp  test1.cpp
search_engine2025/: CMakeLists.txt
search_engine2025/include/: ConverterJSON.h
search_engine2025/resources/: file001.txt
search_engine2025/src/: CMakeLists.txt  ConverterJSON.cpp  SearchServer.cpp  main.cpp
search_engine2025/test/testSearch_engine/: test1.cpp
